1) новый механизм удаления, диалоговое окно покрасивее (пока не везде работает) 2) правка бага с отправкой незаполненных форм 3) вынес стили карточек в отдельные файлы 4) правки стилей карточек, правки вьюшек. 5) исправил отображение кнопки добавления проекта 6) дополнение функционала контроллеров

--- a/TranslationReg/Views/DocStages/Edit.cshtml
+++ b/TranslationReg/Views/DocStages/Edit.cshtml
@@ -12,7 +12,7 @@
 
         <div class="form-group">
             @Html.LabelFor(model => model.WorkTypeId, "WorkTypeId")
-            @Html.DropDownList("WorkTypeId", null, htmlAttributes: new { @class = "form-control", requred = "required" })
+            @Html.DropDownList("WorkTypeId", null, htmlAttributes: new { @class = "form-control", required = "required" })
             @Html.ValidationMessageFor(model => model.WorkTypeId, "", new { @class = "text-danger" })
         </div>
 
