--- a/TranslationReg/Views/Projects/Delete.cshtml
+++ b/TranslationReg/Views/Projects/Delete.cshtml
@@ -1,29 +1,75 @@
 ﻿@using TranslationRegistryModel
 @model TranslationRegistryModel.Project
-<div>
-    <!-- todo привести к нормальному виду-->>
-    <h3>Вы уверены, что хотите удалить данную запись?</h3>
-    <div>
-            <p>Название</p>
-            <p>@Html.DisplayFor(model => model.Name)</p>
 
-            <p>Заказчик</p>
-            <p>@Html.DisplayFor(model => model.Customer)</p>
+<div class="modal-dialog">
+    <div class="modal-content">
 
-            <p>Документы</p>
-            @{List<Document> docs = Model.Documents.ToList();}
-            @for (int i = 0; i < Model.Documents.Count && i < 3; i++)
-            {
-                <p>@docs[i].Name</p>
-            }
+        <!-- Хедер -->
+        <div class="modal-header">
+            <h4 class="modal-title">Удаление проекта "@Model.Name"</h4>
+            <p type="button" class="close" data-dismiss="modal">&times;</p>
+        </div>
 
-        @using (Html.BeginForm())
-        {
-            @Html.AntiForgeryToken()
-
-            <div class="form-actions no-color">
-                <input type="submit" value="Удалить" class="btn btn-danger" />
+        <!-- Тело -->
+        <div class="modal-body">
+            <h3>Вы уверены, что хотите удалить данную запись?</h3>
+            <div class="del-row">
+                <div class="del-property"><p>Название:</p></div>
+                <div class="del-value">
+                    <p>@Model.Name</p>
+                </div>
             </div>
-        }
+            <div class="del-row">
+                <div class="del-property"><p>Заказчик:</p></div>
+                <div class="del-value">
+                    <p>@Model.Customer<p>
+                </div>
+            </div>
+            <div class="del-row">
+                <div class="del-property"><p>Статус:</p></div>
+                <div class="del-value">
+                    <p>@Model.ProjectStatus.Name<p>
+                </div>
+            </div>
+            @{
+                List<Document> docs = Model.Documents.ToList();
+                if (docs != null && docs.Count > 0)
+                {
+                    for (int i = 0; i < Model.Documents.Count && i < 3; i++)
+                    {
+                        <div class="del-row">
+                            <div class="del-property">
+                                @if (i == 0)
+                                {
+                                    <p>Докуметы:</p>
+                                }
+                            </div>
+                            <div class="del-value">
+                                @if (i == 2 && docs.Count > 3)
+                                {
+                                    <p>@(docs[i].Name + " ...")</p>
+                                }
+                                else
+                                {
+                                    <p>@docs[i].Name</p>
+                                }
+                            </div>
+                        </div>
+                    }
+
+                }
+
+            }
+        </div>
+
+        <!-- Подтверждение\отмена -->
+        <div class="modal-footer">
+            @using (Html.BeginForm())
+            {
+                @Html.AntiForgeryToken()
+                <input type="submit" value="Удалить" class="btn btn-delete btn-modal" />
+            }
+            <button type="button" class="btn btn-default btn-cancel btn-modal" data-dismiss="modal">Отмена</button>
+        </div>
     </div>
 </div>
