--- a/TranslationReg/Views/WorkTypes/Delete.cshtml
+++ b/TranslationReg/Views/WorkTypes/Delete.cshtml
@@ -1,24 +1,38 @@
 ﻿@model TranslationRegistryModel.WorkType
+<div class="modal-dialog">
+    <div class="modal-content">
 
-<div>
-    <h3>Вы уверены, что хотите удалить данную запись?</h3>
-    
-    <dl class="dl-horizontal">
-        <dt>@Html.Label("Название")</dt>
-        <dd>@Html.DisplayFor(model => model.Name)</dd>
-
-        <dt>@Html.Label("Описание")</dt>
-        <dd>@Html.DisplayFor(model => model.Description)</dd>
-
-        <dt>@Html.Label("Единицы измерения")</dt>
-        <dd>@Html.DisplayFor(model => model.UnitOfMeasure.Name)</dd>
-    </dl>
-
-    @using (Html.BeginForm())
-    {
-        @Html.AntiForgeryToken()
-        <div class="form-actions no-color">
-            <input type="submit" value="Удалить" class="btn btn-danger" />
+        <!-- Хедер -->
+        <div class="modal-header">
+            <h4 class="modal-title">Удаление типа работ "@Model.Name"</h4>
+            <p type="button" class="close" data-dismiss="modal">&times;</p>
         </div>
-    }
+
+        <!-- Тело -->
+        <div class="modal-body">
+            <h3>Вы уверены, что хотите удалить данную запись?</h3>
+            <div class="del-row">
+                <div class="del-property"><p>Название:</p></div>
+                <div class="del-value">
+                    <p>@Model.Name</p>
+                </div>
+            </div>
+            <div class="del-row">
+                <div class="del-property"><p>Единицы изм.:</p></div>
+                <div class="del-value">
+                    <p>@Model.UnitOfMeasure.Name<p>
+                </div>
+            </div>
+        </div>
+
+        <!-- Подтверждение\отмена -->
+        <div class="modal-footer">
+            @using (Html.BeginForm())
+            {
+                @Html.AntiForgeryToken()
+                <input type="submit" value="Удалить" class="btn btn-delete btn-modal" />
+            }
+            <button type="button" class="btn btn-default btn-cancel btn-modal" data-dismiss="modal">Отмена</button>
+        </div>
+    </div>
 </div>
