--- a/TranslationReg/Views/Documents/Create.cshtml
+++ b/TranslationReg/Views/Documents/Create.cshtml
@@ -13,7 +13,7 @@
 
     <div class="form-group">
         @Html.LabelFor(model => model.Document.ProjectId, "Проект")
-        @Html.DropDownListFor(model => Model.Document.ProjectId, Model.Projects, new { @class = "form-control", requred = "required" })
+        @Html.DropDownListFor(model => Model.Document.ProjectId, Model.Projects, new { @class = "form-control", required = "required" })
         @Html.ValidationMessageFor(model => model.Document.ProjectId, "", new { @class = "text-danger" })
     </div>
 
