--- a/TranslationReg/Views/Documents/Edit.cshtml
+++ b/TranslationReg/Views/Documents/Edit.cshtml
@@ -26,7 +26,7 @@
 
     <div class="form-group">
         @Html.LabelFor(model => model.Name, "Название" )
-            @Html.EditorFor(model => model.Name, new { htmlAttributes = new { @class = "form-control", requred = "required" } })
+            @Html.EditorFor(model => model.Name, new { htmlAttributes = new { @class = "form-control", required = "required" } })
             @Html.ValidationMessageFor(model => model.Name, "", new { @class = "text-danger" })
     </div>
 
@@ -37,13 +37,13 @@
 
     <div class="form-group">
         @Html.LabelFor(model => model.ProjectId, "Проект" )
-            @Html.DropDownList("ProjectId", null, htmlAttributes: new { @class = "form-control", requred = "required" })
+            @Html.DropDownList("ProjectId", null, htmlAttributes: new { @class = "form-control", required = "required" })
             @Html.ValidationMessageFor(model => model.ProjectId, "", new { @class = "text-danger" })
     </div>
 
     <div class="form-group">
         @Html.LabelFor(model => model.WordsNumber, "Количество слов" )
-            @Html.EditorFor(model => model.WordsNumber, new { htmlAttributes = new { @class = "form-control", requred = "required" } })
+            @Html.EditorFor(model => model.WordsNumber, new { htmlAttributes = new { @class = "form-control", required = "required" } })
             @Html.ValidationMessageFor(model => model.WordsNumber, "", new { @class = "text-danger" })
     </div>
 
