--- a/TranslationReg/Views/LanguagePairs/Create.cshtml
+++ b/TranslationReg/Views/LanguagePairs/Create.cshtml
@@ -7,17 +7,17 @@
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <div class="form-group">
             @Html.LabelFor(model => model.languagePair.Name, "Наименование")
-            @Html.EditorFor(model => model.languagePair.Name, new { htmlAttributes = new { @class = "form-control", requred = "required" } })
+            @Html.EditorFor(model => model.languagePair.Name, new { htmlAttributes = new { @class = "form-control", required = "required" } })
         </div>
 
         <div class="form-group">
             @Html.LabelFor(model => model.languagePair.OriginalLanguageId, "Язык оригинала")
-            @Html.DropDownListFor(model => model.languagePair.OriginalLanguageId, Model.originalLanguageSelectlist, null, htmlAttributes: new { @class = "form-control", requred = "required" })
+            @Html.DropDownListFor(model => model.languagePair.OriginalLanguageId, Model.originalLanguageSelectlist, null, htmlAttributes: new { @class = "form-control", required = "required" })
         </div>
 
         <div class="form-group">
             @Html.LabelFor(model => model.languagePair.TranslationLanguageId, "Язык перевода")
-            @Html.DropDownListFor(model => model.languagePair.TranslationLanguageId, Model.translationLanguageSelectlist, null, htmlAttributes: new { @class = "form-control", requred = "required" })
+            @Html.DropDownListFor(model => model.languagePair.TranslationLanguageId, Model.translationLanguageSelectlist, null, htmlAttributes: new { @class = "form-control", required = "required" })
         </div>
 
         <input type="submit" value="Сохранить" class="btn btn-default btn-form" />
