--- a/TranslationReg/Views/LanguagePairs/Edit.cshtml
+++ b/TranslationReg/Views/LanguagePairs/Edit.cshtml
@@ -9,18 +9,18 @@
 
     <div class="form-group">
         @Html.LabelFor(model => model.languagePair.Name, "Наименование")
-        @Html.EditorFor(model => model.languagePair.Name, new { htmlAttributes = new { @class = "form-control", requred = "required" } })
+        @Html.EditorFor(model => model.languagePair.Name, new { htmlAttributes = new { @class = "form-control", required = "required" } })
         @Html.ValidationMessageFor(model => model.languagePair.Name, "", new { @class = "text-danger" })
     </div>
 
     <div class="form-group">
         @Html.LabelFor(model => model.languagePair.OriginalLanguageId, "Язык оригинала")
-        @Html.DropDownListFor(model => model.languagePair.OriginalLanguageId, Model.originalLanguageSelectlist, null, htmlAttributes: new { @class = "form-control", requred = "required" })
+        @Html.DropDownListFor(model => model.languagePair.OriginalLanguageId, Model.originalLanguageSelectlist, null, htmlAttributes: new { @class = "form-control", required = "required" })
     </div>
 
     <div class="form-group">
         @Html.LabelFor(model => model.languagePair.TranslationLanguageId, "Язык перевода")
-        @Html.DropDownListFor(model => model.languagePair.TranslationLanguageId, Model.translationLanguageSelectlist, null, htmlAttributes: new { @class = "form-control", requred = "required" })
+        @Html.DropDownListFor(model => model.languagePair.TranslationLanguageId, Model.translationLanguageSelectlist, null, htmlAttributes: new { @class = "form-control", required = "required" })
     </div>
 
     <input type="submit" value="Сохранить" class="btn btn-default btn-form" />
