--- a/TranslationReg/Views/LanguagePairs/EditCard.cshtml
+++ b/TranslationReg/Views/LanguagePairs/EditCard.cshtml
@@ -6,9 +6,9 @@
     @Html.AntiForgeryToken()
     @Html.HiddenFor(model => model.languagePair.Id)
 
-    <div class="card card-langPair">
+    <div class="card card-blue medium-card">
 
-        <div class="card-header pair-header">
+        <div class="card-header">
             <p>Ред. языковую пару</p>
             <div>
                 <a class="fa fa-arrow-circle-left card-btn" style="font-size:36px" href="/Languages/Cards"></a>
@@ -16,27 +16,28 @@
         </div>
 
         <div class="card-content">
-            <div class="card-row-edit">
-                <div class="card-property-edit col-md-5"><p>Название:</p></div>
-                <div class="card-value-edit col-md-7">
+            <div class="card-row">
+                <div class="card-property"><p>Название:</p></div>
+                <div class="card-value">
                     @Html.EditorFor(model => model.languagePair.Name, new { htmlAttributes = new { @class = "form-control", required = "required" } })
                 </div>
             </div>
-            <div class="card-row-edit">
-                <div class="card-property-edit col-md-5"><p>Оригинал:</p></div>
-                <div class="card-value-edit col-md-7">
+            <div class="card-row">
+                <div class="card-property"><p>Оригинал:</p></div>
+                <div class="card-value">
                     @Html.DropDownListFor(model => model.languagePair.OriginalLanguageId, Model.originalLanguageSelectlist, null, htmlAttributes: new { @class = "form-control", required = "required" })
                 </div>
             </div>
-            <div class="card-row-edit">
-                <div class="card-property-edit col-md-5"><p>Перевод:</p></div>
-                <div class="card-value-edit col-md-7">
+            <div class="card-row">
+                <div class="card-property"><p>Перевод:</p></div>
+                <div class="card-value">
                     @Html.DropDownListFor(model => model.languagePair.TranslationLanguageId, Model.translationLanguageSelectlist, null, htmlAttributes: new { @class = "form-control", required = "required" })
                 </div>
             </div>
-            <div class="card-row-edit">
-                <div class="card-value-edit col-md-7 col-md-offset-5">
-                    <input type="submit" value="Сохранить" class="btn btn-default btn-form" />
+            <div class="card-row">
+                <div class="card-property"></div>
+                <div class="card-value">
+                    <input type="submit" value="Сохранить" class="btn btn-default btn-form form-control" />
                 </div>
             </div>
         </div>
