--- a/TranslationReg/Views/Languages/AddCard.cshtml
+++ b/TranslationReg/Views/Languages/AddCard.cshtml
@@ -3,9 +3,9 @@
 @using (Html.BeginForm("Create", "Languages"))
 {
     @Html.AntiForgeryToken()
-    <div class="card card-language">
+    <div class="card card-orange small-card">
 
-        <div class="card-header lang-header">
+        <div class="card-header">
             <p>Добавить язык</p>
             <div>
                 <a class="fa fa-arrow-circle-left card-btn" style="font-size:36px" href="/Languages/Cards"></a>
@@ -14,65 +14,27 @@
 
         <div class="card-content">
 
-            <div class="card-row-edit">
-                <div class="card-property-edit col-md-4"><p>Назв.:</p></div>
-                <div class="card-value-edit col-md-8">
+            <div class="card-row">
+                <div class="card-property"><p>Назв.:</p></div>
+                <div class="card-value">
                     @Html.EditorFor(model => model.ShortName, new { htmlAttributes = new { @class = "form-control", required = "required" } })
                 </div>
             </div>
 
-            <div class="card-row-edit">
-                <div class="card-property-edit col-md-4"><p>Сокр.:</p></div>
-                <div class="card-value-edit col-md-8">
+            <div class="card-row">
+                <div class="card-property"><p>Сокр.:</p></div>
+                <div class="card-value">
                     @Html.EditorFor(model => model.Name, new { htmlAttributes = new { @class = "form-control", required = "required" } })
                 </div>
             </div>
 
-            <div class="card-row-edit">
-                <div class="card-value-edit col-md-8 col-md-offset-4">
-                    <input type="submit" value="Сохранить" class="btn btn-default btn-form" />
+            <div class="card-row">
+                <div class="card-property"></div>
+                <div class="card-value">
+                    <input type="submit" value="Сохранить" class="btn btn-default btn-form form-control" />
                 </div>
             </div>
 
         </div>
     </div>
 }
-
-<style>
-    .card-property-edit {
-        font-size: 20px;
-        color: #626262;
-        text-align: left;
-        display: flex;
-    }
-
-    .card-value-edit {
-        font-weight: bold;
-        font-size: 20px;
-        color: black;
-        text-align: left;
-        display: flex;
-        padding: 0px;
-    }
-
-    .card-row-edit {
-        display: flex;
-        height: 40px;
-    }
-
-    .card-property-edit > p {
-        margin: 0;
-        overflow: hidden;
-        white-space: nowrap;
-        align-self: center;
-        padding: 5px;
-    }
-
-    .card-value-edit > input {
-        margin: 5px !important;
-        overflow: hidden;
-        white-space: nowrap;
-        align-self: center;
-        padding: 5px;
-    }
-</style>
