--- a/TranslationReg/Views/Languages/Card.cshtml
+++ b/TranslationReg/Views/Languages/Card.cshtml
@@ -1,7 +1,7 @@
 ﻿@model TranslationRegistryModel.Language
 <!-- карточка языков -->
-<div class="card card-language">
-    <div class="card-header lang-header">
+<div class="card card-orange small-card">
+    <div class="card-header">
         <p>Язык</p>
         <div>
             <a class="fa fa-edit card-btn ajaxToggleCard" data-ajax-update="#language@(Model.Id)" data-href="/Languages/EditCard/@Model.Id" style="font-size:36px"></a>
@@ -10,15 +10,15 @@
     </div>
     <div class="card-content">
         <div class="card-row">
-            <div class="card-property col-md-4"><p>Назв.:</p></div>
-            <div class="card-value col-md-8">
+            <div class="card-property"><p>Назв.:</p></div>
+            <div class="card-value">
                 <p>@Model.Name</p>
             </div>
         </div>
 
         <div class="card-row">
-            <div class="card-property col-md-4"><p>Сокр.:</p></div>
-            <div class="card-value col-md-8">
+            <div class="card-property"><p>Сокр.:</p></div>
+            <div class="card-value">
                 <p>@Model.ShortName<p>
             </div>
         </div>
