--- a/TranslationReg/Views/Languages/Edit.cshtml
+++ b/TranslationReg/Views/Languages/Edit.cshtml
@@ -9,13 +9,13 @@
 
     <div class="form-group">
         @Html.LabelFor(model => model.Name, "Наименование", htmlAttributes: new { @class = "control-label col-md-5" })
-        @Html.EditorFor(model => model.Name, new { htmlAttributes = new { @class = "form-control", requred = "required" } })
+        @Html.EditorFor(model => model.Name, new { htmlAttributes = new { @class = "form-control", required = "required" } })
         @Html.ValidationMessageFor(model => model.Name, "", new { @class = "text-danger" })
     </div>
 
     <div class="form-group">
         @Html.LabelFor(model => model.ShortName, "Сокращение", htmlAttributes: new { @class = "control-label col-md-5" })
-        @Html.EditorFor(model => model.ShortName, new { htmlAttributes = new { @class = "form-control", requred = "required" } })
+        @Html.EditorFor(model => model.ShortName, new { htmlAttributes = new { @class = "form-control", required = "required" } })
         @Html.ValidationMessageFor(model => model.ShortName, "", new { @class = "text-danger" })
     </div>
 
