--- a/TranslationReg/Views/ProjectStatuse/Card.cshtml
+++ b/TranslationReg/Views/ProjectStatuse/Card.cshtml
@@ -1,24 +1,24 @@
 ﻿@model TranslationRegistryModel.ProjectStatus
 <!-- карточка типа работ -->
-<div class="card card-blue card-300-180">
+<div class="card card-blue medium-card">
     <div class="card-header">
         <p>Статус проекта</p>
         <div>
-            <a class="fa fa-edit card-btn ajaxToggleCard" data-ajax-update="#worktype@(Model.Id)" data-href="/Worktypes/EditCard/@Model.Id" style="font-size:36px"></a>
-            <a class="fa fa-times card-btn deleteBtn" href="/Worktypes/Delete/@Model.Id" data-dialog-title="Удаление типа работ" style="font-size:36px"></a>
+            <a class="fa fa-edit card-btn ajaxToggleCard" data-ajax-update="#projectStatuse@(Model.Id)" data-href="/ProjectStatuse/EditCard/@Model.Id" style="font-size:36px"></a>
+            <a class="fa fa-times card-btn deleteBtn" href="/ProjectStatuse/Delete/@Model.Id" data-dialog-title="Удаление типа работ" style="font-size:36px"></a>
         </div>
     </div>
     <div class="card-content">
         <div class="card-row">
-            <div class="card-property col-md-4"><p>Название:</p></div>
-            <div class="card-value col-md-8">
+            <div class="card-property"><p>Название:</p></div>
+            <div class="card-value">
                 <p>@Model.Name</p>
             </div>
         </div>
 
         <div class="card-row">
-            <div class="card-property col-md-4"><p>Описание:</p></div>
-            <div class="card-value col-md-8">
+            <div class="card-property"><p>Описание:</p></div>
+            <div class="card-value">
                 <p>@Model.Description<p>
             </div>
         </div>
