--- a/TranslationReg/Views/Projects/Create.cshtml
+++ b/TranslationReg/Views/Projects/Create.cshtml
@@ -7,13 +7,13 @@
 
     <div class="form-group">
         @Html.LabelFor(model => model, "Название" )
-        @Html.EditorFor(model => model.Project.Name, new { htmlAttributes = new { @class = "form-control", requred = "required" } })
+        @Html.EditorFor(model => model.Project.Name, new { htmlAttributes = new { @class = "form-control", required = "required" } })
         @Html.ValidationMessageFor(model => model.Project.Name, "", new { @class = "text-danger" })
     </div>
 
     <div class="form-group">
         @Html.LabelFor(model => model.Project.LanguagePairId, "Языковая пара" )
-        @Html.DropDownListFor(model => model.Project.LanguagePairId, Model.LanguagePairs, new { @class = "form-control", requred = "required" })
+        @Html.DropDownListFor(model => model.Project.LanguagePairId, Model.LanguagePairs, new { @class = "form-control", required = "required" })
         @Html.ValidationMessageFor(model => model.Project.LanguagePairId, "", new { @class = "text-danger" })
     </div>
 
@@ -25,7 +25,7 @@
 
     <div class="form-group">
         @Html.LabelFor(model => model.Project.ProjectStatuseId, "Статус" )
-        @Html.DropDownListFor(model => model.Project.ProjectStatuseId, Model.ProjectStatus, new { @class = "form-control", requred = "required" })
+        @Html.DropDownListFor(model => model.Project.ProjectStatuseId, Model.ProjectStatus, new { @class = "form-control", required = "required" })
         @Html.ValidationMessageFor(model => model.Project.ProjectStatuseId, "", new { @class = "text-danger" })
     </div>
 
