--- a/TranslationReg/Views/Projects/Edit.cshtml
+++ b/TranslationReg/Views/Projects/Edit.cshtml
@@ -23,19 +23,19 @@
 
         <div class="form-group">
             @Html.LabelFor(model => model.Project.Name, "Наименование")
-            @Html.EditorFor(model => model.Project.Name, new { htmlAttributes = new { @class = "form-control", requred = "required" } })
+            @Html.EditorFor(model => model.Project.Name, new { htmlAttributes = new { @class = "form-control", required = "required" } })
             @Html.ValidationMessageFor(model => model.Project.Name, "", new { @class = "text-danger" })
         </div>
 
         <div class="form-group">
             @Html.LabelFor(model => model.Project.LanguagePairId, "Языковая пара")
-            @Html.DropDownListFor(model => model.Project.LanguagePairId, Model.LanguagePairs, new { @class = "form-control", requred = "required" })
+            @Html.DropDownListFor(model => model.Project.LanguagePairId, Model.LanguagePairs, new { @class = "form-control", required = "required" })
             @Html.ValidationMessageFor(model => model.Project.LanguagePairId, "", new { @class = "text-danger" })
         </div>
 
         <div class="form-group">
             @Html.LabelFor(model => model.Project.ProjectStatuseId, "Статус")
-            @Html.DropDownListFor(model => model.Project.ProjectStatuseId, Model.ProjectStatus, new { @class = "form-control", requred = "required" })
+            @Html.DropDownListFor(model => model.Project.ProjectStatuseId, Model.ProjectStatus, new { @class = "form-control", required = "required" })
             @Html.ValidationMessageFor(model => model.Project.ProjectStatuseId, "", new { @class = "text-danger" })
         </div>
 
