--- a/TranslationReg/Views/Projects/Index.cshtml
+++ b/TranslationReg/Views/Projects/Index.cshtml
@@ -33,7 +33,7 @@
     </div>
 </div>
 
-<a data-ajax-update="#addProj" data-href="/Projects/Create" class="btn btn-primary ajaxToggleBtn costum-btn costum-btn_edit"></a>
+<a data-ajax-update="#addProj" data-href="/Projects/Create" class="btn btn-primary ajaxToggleBtn">Добавить</a>
 <div id="addProj" class="dynamicBlock dynamic-block-create"></div>
 
 <div id="projectList">
