--- a/TranslationReg/Views/WorkTypes/Card.cshtml
+++ b/TranslationReg/Views/WorkTypes/Card.cshtml
@@ -1,24 +1,24 @@
 ﻿@model TranslationRegistryModel.WorkType
 <!-- карточка типа работ -->
-<div class="card card-orange card-300-180">
+<div class="card card-orange small-card">
     <div class="card-header">
         <p>Тип работ</p>
         <div>
-            <a class="fa fa-edit card-btn ajaxToggleCard" data-ajax-update="#worktype@(Model.Id)" data-href="/Worktypes/EditCard/@Model.Id" style="font-size:36px"></a>
+            <a class="fa fa-edit card-btn ajaxToggleCard" data-ajax-update="#workType@(Model.Id)" data-href="/Worktypes/EditCard/@Model.Id" style="font-size:36px"></a>
             <a class="fa fa-times card-btn deleteBtn" href="/Worktypes/Delete/@Model.Id" data-dialog-title="Удаление типа работ" style="font-size:36px"></a>
         </div>
     </div>
     <div class="card-content">
         <div class="card-row">
-            <div class="card-property col-md-4"><p>Назв.:</p></div>
-            <div class="card-value col-md-8">
+            <div class="card-property"><p>Назв.:</p></div>
+            <div class="card-value">
                 <p>@Model.Name</p>
             </div>
         </div>
 
         <div class="card-row">
-            <div class="card-property col-md-4"><p>Ед.изм.:</p></div>
-            <div class="card-value col-md-8">
+            <div class="card-property"><p>Ед.изм.:</p></div>
+            <div class="card-value">
                 <p>@Model.UnitOfMeasure.Name<p>
             </div>
         </div>
